# fields_monitoring

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
api/: images.py
application/: images_service.py
common/: env.py
config/: logging_config.py
domain/: custom_exceptions.py  fields.csv  nasa_imagery.py
domain/entities/: field.py
domain/entitites/: field.py
domain/repositories/: images_repository.py
infrastructure/: env.py
infrastructure/repositories/: images_repository_impl.py  nasa_images_repository.py
infrastructure/utils/: URLBuilder.py
tests/test_api/: test_images.py
tests/test_application/: test_images_service.py
tests/test_infrastructure/: test_images_repository_impl.py
