[tool.poetry]
name = "fields-monitoring"
version = "0.1.0"
description = "Fields monitoring using NASA API"
authors = ["andresfeliper3 <andresfeliper.2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
requests = "^2.32.3"
boto3 = "^1.34.120"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
moto = "2.2.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
